5 Services and Networking/2 Demonstrate Basic Understanding of NetworkPolicies/febe-netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: febe 
  namespace: ps
spec:
  podSelector:
    matchLabels:
      app: be
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: fe
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ps
      ports:
        - protocol: TCP
          port: 5432
